--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/tree.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>전국 트리 지도</title>
+    <title>메리 트리스마스</title>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_MAP_KEY%&libraries=services"
